<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparent_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:cardCornerRadius="4dp"
        app:contentPaddingBottom="20dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:contentPaddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="8dp"
                android:text="@string/result_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/cardview_dark_background"></View>

            <TextView
                android:id="@+id/result_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_sample"
                android:textAlignment="center"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/result_age_gender_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_gender_sample"
                android:textAlignment="center"
                android:textSize="16sp"
                android:paddingBottom="10dp"/>


            <ImageView
                android:id="@+id/result_icon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="30dp"
                android:scaleType="centerInside"
                android:background="@drawable/transparent_bg"
                android:src="@drawable/low_risk" />


            <TextView
                android:id="@+id/result_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_sample"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/result_comment_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/comment_sample"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/new_qn_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_bg"
        android:focusable="false"
        android:onClick="startNewQuiz"
        android:text="@string/new_quiz"
        android:textColor="@android:color/white"
         />


</LinearLayout>